# gengine

./: CMakeLists.txt  README.md  engine.cc  ex00.cpp  ex00.h  gengine_figures3d.cpp  gengine_figures3d.h  gengine_l3d.cpp  gengine_l3d.h  gengine_line.cpp  gengine_line.h  gengine_utils.cpp  gengine_utils.h
gengine/: color.h  figure.h  figures3d.cpp  figures3d.h  l_systems2d.cpp  l_systems2d.h  light.h  line.cpp  line.h  line2d.h  line3d.cpp  line3d.h  utils.cpp  utils.h  wireframes.cpp  wireframes.h  wireframeszbuflight.cpp  wireframeszbuflight.h  wireframeszbuftri.cpp  wireframeszbuftri.h  wireframezbuf.cpp  wireframezbuf.h  zbuffer.cpp  zbuffer.h  zbuffering.cpp  zbuffering.h  zbufwireframe.cpp  zbufwireframe.h
ini/: custom_chaos.L2D  custom_chaos.ini  custom_fractal_plant.ini  filelist  fractal_plant.L2D  fractal_plant.ini
ini-wireframes/: cow.ini  filelist
lib/: l_parser.cc  l_parser.h
